welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ';' expected but '=' found.
avr fini:bool = false
              ^