welcome.lessons.welcome.bdr.BDR.scala.code
avr fini:bool = false
while (!fini) {
  avance()
} 